# unix-cpp-shell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run_tests.sh  vcpkg.json  your_program.sh
.github/workflows/: tests.yml
src/: alias_manager.cpp  alias_manager.h  command_parser.cpp  command_parser.h  command_table.cpp  command_table.h  completion.cpp  completion.h  glob_utils.cpp  glob_utils.h  main.cpp  pipe_utils.cpp  pipe_utils.h  redirect_guard.cpp  redirect_guard.h  shell_utils.cpp  shell_utils.h
tests/: alias_manager_test.cpp  command_parser_test.cpp  command_table_test.cpp  completion_test.cpp  glob_utils_test.cpp  pipe_utils_test.cpp  redirect_guard_test.cpp  shell_utils_test.cpp
tests/integration/: CMakeLists.txt  advanced_features.exp  aliases.exp  globbing.exp  pipeline_redirection.exp  simple_command.exp  tab_completion.exp
